--- a/gonode/challenge1/src/views/major.njk
+++ b/gonode/challenge1/src/views/major.njk
@@ -1,1 +1,25 @@
-<h1>Você é maior de idade e tem {{ age }} anos.</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Cadastro de idade</title>
+  <style>
+   .container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+  }
+  </style>
+</head>
+<body>
+  <main>
+    <div class="container">
+    <h1>You are underage and you are {{age}} years old.</h1>
+    </div>
+  </main>
+</body>
+</html>
+
