--- a/gonode/challenge1/src/views/major.njk
+++ b/gonode/challenge1/src/views/major.njk
@@ -17,7 +17,7 @@
 <body>
   <main>
     <div class="container">
-    <h1>You are underage and you are {{age}} years old.</h1>
+    <h1>You are of age and you are {{age}} years old.</h1>
     </div>
   </main>
 </body>
