--- a/gonode/challenge1/src/views/start.njk
+++ b/gonode/challenge1/src/views/start.njk
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Cadastro de idade</title>
+  <title>Age</title>
   <style>
    .container{
       display: flex;
@@ -18,10 +18,10 @@
 <body>
   <main>
     <div class="container">
-      <h1>Cadastre sua idade</h1>
+      <h1>Tell us how  old you are</h1>
       <form action="/check" method="post">
         <input name="age">
-        <button type="submit">Enviar</button>
+        <button type="submit">Send</button>
       </form>
     </div>
   </main>
