--- a/goreact/challenge1/src/style.scss
+++ b/goreact/challenge1/src/style.scss
@@ -1,5 +1,76 @@
-body{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+body {
+  background: #e9eaeb;
+}
+
+header {
+  .header-content {
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    background: #4242e2;
+    height: 4rem;
+
+    h2 {
+      color: #fff;
+      margin: auto 0;
+    }
+  }
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0 2rem 2rem 2rem;
+}
+
+.post {
+  max-width: 750px;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-top: 2rem;
+  padding: 2rem;
+
+  &-header {
+    display: flex;
+    align-items: center;
+
+    .avatar {
+      border-radius: 50%;
+      height: 4rem;
+      width: 4rem;
+    }
+
+    &-content {
+      margin-left: 0.75rem;
+      display: flex;
+      flex-direction: column;
+
+      h4 {
+        color: #6e6d6d;
+      }
+
+      span {
+        color: #888888;
+        margin-top: 0.5rem;
+      }
+    }
+  }
+
+  &-content {
+    color: #333;
+    font-size: 1rem;
+    border-top: 1px solid #ebe7e7;
+    line-height: 1.5rem;
+    margin-top: 1.5rem;
+    padding-top: 1.5rem;
+  }
 }
