--- a/goreact/challenge3/src/components/LeftBar/style.css
+++ b/goreact/challenge3/src/components/LeftBar/style.css
@@ -4,8 +4,7 @@
   left: 2%;
   height: 92%;
   width: 20%;
-  background: rgba(248, 248, 248, 0.8);
-  /* padding: 5px; */
+  background: rgba(248, 248, 248);
   border-radius: 3px;
   padding: 0 15px;
 }
